[package]
name = "my-guitar-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.22.0", features = ["persistence"]}
log = "0.4.0"
env_logger = "0.10"
itertools = "0.10.5"
serde = { version = "1.0.163", features = ["derive"]}
serde_json = "1.0.96"
